# taoyao

./: .gitignore  .gitmodules  README.md  pom.xml
taoyao-client-android/taoyao/client/src/main/cpp/: CMakeLists.txt  main.cpp
taoyao-client-android/taoyao/client/src/main/cpp/media/: MediaRecorder.cpp
taoyao-client-android/taoyao/media/: CMakeLists.txt  README.md  build.gradle
taoyao-client-android/taoyao/media/src/main/: AndroidManifest.xml
taoyao-client-android/taoyao/media/src/main/cpp/: main.cpp
taoyao-client-android/taoyao/media/src/main/cpp/include/: LocalClient.hpp  Log.hpp  MediaManager.hpp  RemoteClient.hpp  Rnnoise.hpp  Room.hpp  RouterCallback.hpp  VideoPublisher.hpp
taoyao-client-android/taoyao/media/src/main/cpp/media/: AudioPublisher.cpp  MediaRecorder.cpp  P2PClient.cpp  RemoteClient.cpp  Room.cpp
taoyao-client-android/taoyao/media/src/main/cpp/rtp/: RtpAudioPublisher.cpp  RtpClient.cpp  RtpVideoPublisher.cpp
taoyao-client-android/taoyao/media/src/main/cpp/webrtc/: LocalClient.cpp  MediaManager.cpp  MediasoupClient.cpp  Rnnoise.cpp  Room.cpp  RouterCallback.cpp  SessionClient.cpp
taoyao-client-android/taoyao/media/src/main/java/com/acgist/media/: AudioPublisher.java  ClientRecorder.java  RoomClient.java  VideoPublisher.java
taoyao-client-android/taoyao/media/src/main/java/com/acgist/taoyao/: RouterCallback.java
taoyao-client-android/taoyao/media/src/main/java/com/acgist/taoyao/config/: Config.java  MediaAudioProperties.java  MediaProperties.java  MediaVideoProperties.java
taoyao-client-android/taoyao/media/src/main/java/com/acgist/taoyao/media/: Broadcaster.java  ClientRecorder.java  LocalClient.java  MediaManager.java  MediaRecorder.java  P2PClient.java  RemoteClient.java  Room.java  RoomClient.java  RouterCallback.java  SessionClient.java  TransportType.java  VideoPublisher.java  VideoSourceType.java
taoyao-client-android/taoyao/media/src/main/java/com/acgist/taoyao/media/client/: Client.java  (+8 more)
taoyao-client-android/taoyao/media/src/main/java/com/acgist/taoyao/p2p/: P2PClient.java
taoyao-client-android/taoyao/media/src/main/java/com/acgist/taoyao/signal/: ITaoyao.java
taoyao-client-android/taoyao/media/src/main/java/org/webrtc/: AndroidVideoDecoder.java  Camera1Session.java  Camera2Enumerator.java  Camera2Session.java  EglBase.java  EglBase10Impl.java  EglBase14Impl.java  EglRenderer.java  GlUtil.java  HardwareVideoEncoder.java  HardwareVideoEncoderFactory.java  MediaCodecUtils.java  MediaCodecVideoDecoderFactory.java  NetworkChangeDetector.java  NetworkMonitorAutoDetect.java  PeerConnection.java  PeerConnectionFactory.java  RtpSender.java  ScreenCapturerAndroid.java  SoftwareVideoDecoderFactory.java  SoftwareVideoEncoderFactory.java  SurfaceEglRenderer.java  SurfaceTextureHelper.java  ThreadUtils.java  VideoEncoder.java  VideoFrame.java  VideoFrameBufferType.java  VideoFrameDrawer.java  YuvConverter.java
taoyao-client-android/taoyao/media/src/main/java/org/webrtc/audio/: JavaAudioDeviceModule.java  WebRtcAudioEffects.java  WebRtcAudioRecord.java  WebRtcAudioTrack.java
taoyao-client-android/taoyao/media/src/main/java/org/webrtc/voiceengine/: WebRtcAudioEffects.java  WebRtcAudioRecord.java  WebRtcAudioTrack.java
taoyao-client-harmony/taoyao/: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
taoyao-client-harmony/taoyao/client/: build.gradle
taoyao-client-harmony/taoyao/client/src/main/: config.json
taoyao-client-harmony/taoyao/client/src/main/cpp/: CMakeLists.txt  main.cpp
taoyao-client-harmony/taoyao/client/src/main/cpp/include/: AudioPublisher.hpp  MediaPublisher.hpp
taoyao-client-harmony/taoyao/client/src/main/cpp/media/: VideoPublisher.cpp
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/: MainAbility.java  MediaAbility.java  TaoyaoApplication.java
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/config/: Config.java
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/media/: AudioPublisher.java  MediaClient.java  MediaRecorder.java
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/model/: Header.java  Message.java  MessageCode.java  MessageCodeException.java
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/signal/: Taoyao.java
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/slice/: MainAbilitySlice.java  SettingAbilitySlice.java
taoyao-client-harmony/taoyao/client/src/main/java/com/acgist/taoyao/utils/: CloseableUtils.java  DateUtils.java  JSONUtils.java
taoyao-client-harmony/taoyao/client/src/main/resources/base/element/: integer.json  string.json
taoyao-client-harmony/taoyao/client/src/ohosTest/java/com/acgist/taoyao/: ExampleOhosTest.java
taoyao-client-harmony/taoyao/client/src/test/java/com/acgist/taoyao/: ExampleTest.java  TaoyaoTest.java
taoyao-client-harmony/taoyao/gradle/wrapper/: gradle-wrapper.properties
taoyao-client-harmony/taoyao/include/: AudioPublisher.hpp  MediaClient.hpp  MediaRecorder.hpp  Publisher.hpp  Taoyao.hpp  VideoPublisher.hpp
taoyao-client-harmony/taoyao/src/: main.cpp
taoyao-client-harmony/taoyao/src/media/: AudioPublisher.cpp  MediaClient.cpp  MediaRecorder.cpp  VideoPublisher.cpp
taoyao-client-harmony/taoyao/src/signal/: Taoyao.cpp
taoyao-client-openharmony/taoyao/media/src/main/cpp/: CMakeLists.txt  bind.cpp  hello.cpp
taoyao-client-openharmony/taoyao/media/src/main/cpp/include/: AudioCapturer.hpp  Capturer.hpp  Client.hpp  LocalClient.hpp  MediaManager.hpp  Palyer.hpp  Player.hpp  RemoteClient.hpp  Room.hpp  RoomClient.hpp  SessionClient.hpp  Signal.hpp  VideoCapturer.hpp  WebRTC.hpp
taoyao-client-openharmony/taoyao/media/src/main/cpp/media/: AudioCapturer.cpp  AudioPlayer.cpp  CameraCapturer.cpp  Capturer.cpp  Client.cpp  LocalClient.cpp  MediaManager.cpp  Player.cpp  RemoteClient.cpp  Room.cpp  RoomClient.cpp  ScreenCapturer.cpp  Signal.cpp  VideoCapturer.cpp  VideoDecoder.cpp  VideoEncoder.cpp  VideoPlayer.cpp  WebRTC.cpp
taoyao-client-openharmony/taoyao/media/src/main/cpp/types/libtaoyao/: index.d.ts  oh-package.json5
(+1043 files in other folders)
